# octravpn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.demo.yml  docker-compose.mesh-demo.yml  docker-compose.testnet.yml  docker-compose.yml  ou-snapshot.txt  rust-toolchain.toml
crates/octra-circle-sim/: Cargo.toml
crates/octra-circle-sim/src/: acl.rs  chain.rs  lib.rs  meter.rs  rpc_chain.rs  sim.rs
crates/octra-circle-sim/tests/: non_exhaustive_errors.rs  v2_e2e.rs
crates/octra-cli/: Cargo.toml
crates/octra-cli/src/: anvil.rs  chisel.rs  io.rs  lib.rs  main.rs  rpc_client.rs
crates/octra-cli/src/cast/: abi.rs  hash.rs  mod.rs  tx.rs  wallet.rs
crates/octra-cli/src/forge/: bind.rs  build.rs  compile.rs  coverage.rs  create.rs  inspect.rs  mod.rs  snapshot.rs  test_cmd.rs  trace.rs
crates/octra-cli/tests/: anvil.rs  cast_call.rs  cast_hash.rs  cast_in_process.rs  cast_wallet.rs  chisel.rs  cli_basics.rs  forge_bind.rs  forge_build.rs  forge_create.rs  forge_inspect.rs  forge_snapshot.rs  forge_test.rs  tool_parity.rs
crates/octraforge/: Cargo.toml  DESIGN.md
crates/octraforge/src/: aml_coverage.rs  aml_invariants.rs  cheatcodes.rs  fork.rs  fs.rs  fuzz.rs  invariant.rs  lib.rs  macros.rs  mock.rs  octravpn.rs  ou.rs  ou_cost_model.rs  wallet.rs
crates/octraforge/src/forge_std/: assertions.rs  console.rs  mod.rs  std_cheats.rs  std_storage.rs  std_utils.rs
crates/octraforge/tests/: aml_coverage.rs  aml_fuzz.rs  bond_slash.rs  cheatcodes.rs  demo.rs  join_token.rs  multidevice.rs  ou_snapshot.rs  view_pubkey.rs
crates/octravpn-admin-ui/: Cargo.toml
crates/octravpn-admin-ui/src/: api.rs  lib.rs  main.rs  state.rs
crates/octravpn-admin-ui/src/assets/: app.js  index.html  styles.css
crates/octravpn-admin-ui/tests/: admin_cli.rs
crates/octravpn-analytics/: Cargo.toml
crates/octravpn-analytics/src/: audit_reader.rs  bucket.rs  event.rs  http.rs  indexer.rs  lib.rs  main.rs
crates/octravpn-analytics/tests/: bucket_rollover.rs  cross_day_and_concurrency.rs  e2e_audit_replay.rs  http_endpoints.rs
crates/octravpn-audit-chain/: Cargo.toml
crates/octravpn-audit-chain/src/: lib.rs
crates/octravpn-client/: Cargo.toml
crates/octravpn-client/benches/: cold_connect.rs
crates/octravpn-client/src/: chain_v3.rs  commands.rs  config.rs  discover.rs  discover_v2.rs  main.rs  operator_backend.rs  runner.rs  settle_state.rs  settler.rs  tailnet.rs  v2_cache.rs  v2_runner.rs  v3_runner.rs  wallet.rs
crates/octravpn-client/src/commands/: bugreport.rs  fetch.rs  open_url.rs  serve.rs  settle.rs  slash.rs
crates/octravpn-client/src/portal/: chain.rs  mime.rs  mod.rs  routes.rs  static_assets.rs
crates/octravpn-client/tests/: bugreport.rs  portal_integration.rs  serve_cli.rs  tailnet_cli.rs  v2_cli.rs  v3_client_integration.rs
crates/octravpn-core/: Cargo.toml
crates/octravpn-core/benches/: core.rs
crates/octravpn-core/src/: address.rs  aead.rs  b64.rs  backend.rs  bearer.rs  bounded.rs  chain_tx_queue.rs  commit.rs  control.rs  coverage.rs  earnings.rs  enroll.rs  lib.rs  onion.rs  receipt.rs  receipt_journal.rs  receipt_log.rs  receipt_vault.rs  rpc.rs  session.rs  sig.rs  spki_verifier.rs  stealth.rs  tx.rs  util.rs  v3_calls.rs  v3_canonical.rs  v3_members.rs  v3_policy.rs  v3_state_root.rs  validator_oracle.rs  wallet_enc.rs
crates/octravpn-core/src/receipt_journal/: README.md  codec.rs  compact.rs  errors.rs  eviction.rs  fsync_policy.rs  inner.rs  migration.rs  mod.rs  proptests.rs
crates/octravpn-core/tests/: devnet_rpc_contract.rs  non_exhaustive_errors.rs  prop_canonicalization.rs  prop_commit.rs  prop_receipt.rs  prop_security.proptest-regressions  prop_security.rs  prop_session.rs
crates/octravpn-mesh/: Cargo.toml
crates/octravpn-mesh/benches/: peer_publish.rs
crates/octravpn-mesh/src/: acl.rs  admin_surface.rs  conn.rs  headscale_bridge.rs  ip_alloc.rs  knock.rs  lib.rs  magic_dns.rs  manager.rs  peer.rs  serve.rs  stun.rs  subnet.rs
crates/octravpn-mesh/src/headscale_bridge/: metrics.rs  mod.rs  persistence.rs  (+3 more)
crates/octravpn-mesh/tests/: coverage_boost.rs  integration_e2e.rs  non_exhaustive_errors.rs  prop_sweep.proptest-regressions  prop_sweep.rs
crates/octravpn-node/: Cargo.toml
crates/octravpn-node/benches/: audit_boot_replay.rs  pvac_shadow.rs  settle_throughput.rs  wireguard_throughput.rs
crates/octravpn-node/src/: audit.rs  audit_cli.rs  chain.rs  chain_v2.rs  chain_v3.rs  circle_update.rs  cli_ops.rs  cli_report.rs  config.rs  control.rs  events.rs  hub.rs  main.rs  mesh_ops.rs  native_derp.rs  onion.rs  pvac.rs  rate_limit.rs  receipts.rs  relay_settlement.rs  seal.rs  tunnel.rs  v3_boot.rs  v3_cli.rs
crates/octravpn-node/tests/: audit_cli_integration.rs  headscale_cli_passthrough.rs  mesh_serve_admin.rs  policy_e2e.rs  raw_tls_integration.rs  shadow_hfhe.rs  stress.rs  tailscale_wire_integration.rs  v3_boot_integration.rs  wg_kernel_backend.rs
crates/octravpn-obfs4/: Cargo.toml
crates/octravpn-obfs4/src/: bridge.rs  frame.rs  handshake.rs  iat.rs  lib.rs  transport.rs
crates/octravpn-obfs4/tests/: non_exhaustive_errors.rs
crates/octravpn-tun/: Cargo.toml
crates/octravpn-tun/proptest-regressions/: amnezia.txt
crates/octravpn-tun/src/: amnezia.rs  lib.rs  transport.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_acl_parse.rs  fuzz_circle_state_root_replay.rs  fuzz_ip_alloc.rs  fuzz_peer_snapshot_decode.rs  fuzz_preauth_redeem.rs  fuzz_v3_settle_claim_double_spend.rs  fuzz_validator_health_oracle.rs  fuzz_validator_rpc_envelope.rs  fuzz_vault_record_decode.rs  onion_peel.rs  receipt_decode.rs  tx_canonical.rs
proofs/kani/: Cargo.toml  README.md
proofs/kani/src/: lib.rs
pvac-sidecar/ipc-tests/: Cargo.toml
pvac-sidecar/ipc-tests/src/: lib.rs
pvac-sidecar/ipc-tests/tests/: chain_compat.rs  error_paths.rs  ipc_contract.rs  pvac_pubkey_roundtrip.rs  stress_roundtrip.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/mocks/: Cargo.toml
tests/mocks/src/: lib.rs  main.rs
(+509 files in other folders)
