[package]
name = "octravpn-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
octravpn-core = { path = "../crates/octravpn-core" }
octravpn-mesh = { path = "../crates/octravpn-mesh" }
serde_json = "1"

[[bin]]
name = "receipt_decode"
path = "fuzz_targets/receipt_decode.rs"
test = false
doc = false

[[bin]]
name = "onion_peel"
path = "fuzz_targets/onion_peel.rs"
test = false
doc = false

[[bin]]
name = "tx_canonical"
path = "fuzz_targets/tx_canonical.rs"
test = false
doc = false

[[bin]]
name = "fuzz_acl_parse"
path = "fuzz_targets/fuzz_acl_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_peer_snapshot_decode"
path = "fuzz_targets/fuzz_peer_snapshot_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ip_alloc"
path = "fuzz_targets/fuzz_ip_alloc.rs"
test = false
doc = false
