[package]
name = "octravpn-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
octravpn-core = { path = "../crates/octravpn-core" }
octravpn-mesh = { path = "../crates/octravpn-mesh" }
serde_json = "1"
# `onion_peel` constructs a fixed `StaticSecret` to drive the peeler.
# Must match the version pinned by octravpn-core's workspace
# (currently `x25519-dalek 2` with `static_secrets`).
x25519-dalek = { version = "2", features = ["static_secrets"] }

[[bin]]
name = "receipt_decode"
path = "fuzz_targets/receipt_decode.rs"
test = false
doc = false

[[bin]]
name = "onion_peel"
path = "fuzz_targets/onion_peel.rs"
test = false
doc = false

[[bin]]
name = "tx_canonical"
path = "fuzz_targets/tx_canonical.rs"
test = false
doc = false

[[bin]]
name = "fuzz_acl_parse"
path = "fuzz_targets/fuzz_acl_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_peer_snapshot_decode"
path = "fuzz_targets/fuzz_peer_snapshot_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ip_alloc"
path = "fuzz_targets/fuzz_ip_alloc.rs"
test = false
doc = false

[[bin]]
name = "fuzz_validator_rpc_envelope"
path = "fuzz_targets/fuzz_validator_rpc_envelope.rs"
test = false
doc = false

[[bin]]
name = "fuzz_v3_settle_claim_double_spend"
path = "fuzz_targets/fuzz_v3_settle_claim_double_spend.rs"
test = false
doc = false

[[bin]]
name = "fuzz_validator_health_oracle"
path = "fuzz_targets/fuzz_validator_health_oracle.rs"
test = false
doc = false

[[bin]]
name = "fuzz_circle_state_root_replay"
path = "fuzz_targets/fuzz_circle_state_root_replay.rs"
test = false
doc = false

[[bin]]
name = "fuzz_preauth_redeem"
path = "fuzz_targets/fuzz_preauth_redeem.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vault_record_decode"
path = "fuzz_targets/fuzz_vault_record_decode.rs"
test = false
doc = false
