[package]
name = "octra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Foundry-style unified CLI (forge/cast/anvil/chisel) for Octra programs."
publish = false

[[bin]]
name = "octra"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
octravpn-core      = { path = "../octravpn-core" }
octra-mock-rpc     = { path = "../../../octra-foundry/crates/octra-mock-rpc" }
octraforge         = { path = "../../../octra-foundry/crates/octraforge" }

anyhow             = { workspace = true }
base64             = { workspace = true }
bs58               = { workspace = true }
clap               = { workspace = true, features = ["derive", "env"] }
clap_complete      = "4"
hex                = { workspace = true }
parking_lot        = { workspace = true }
rand               = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
tempfile    = { workspace = true }
serde_json  = { workspace = true }

[lints]
workspace = true
