[package]
name = "octraforge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Foundry-style test framework for Octra programs."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
octravpn-core      = { path = "../octravpn-core" }
octravpn-mock-rpc  = { path = "../../tests/mocks" }

curve25519-dalek   = { workspace = true }
hex                = { workspace = true }
parking_lot        = { workspace = true }
rand               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
thiserror          = { workspace = true }
proptest           = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
