[package]
name = "octravpn-admin-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Tailscale-style management web UI for OctraVPN — axum + embedded SPA."

[[bin]]
name = "octravpn-admin"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
octravpn-core = { path = "../octravpn-core" }
octravpn-mesh = { path = "../octravpn-mesh" }

anyhow      = { workspace = true }
async-trait = { workspace = true }
axum        = { workspace = true }
clap        = { workspace = true }
hex         = { workspace = true }
parking_lot = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
sha2        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower    = "0.5"
http-body-util = { workspace = true }

[lints]
workspace = true
