[package]
name = "octravpn-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "OctraVPN historical analytics indexer: audit-log -> in-memory time-bucketed counters + Prometheus / JSON time-series."

[lib]
name = "octravpn_analytics"
path = "src/lib.rs"

[[bin]]
name = "octravpn-analytics"
path = "src/main.rs"

[dependencies]
anyhow      = { workspace = true }
axum        = { workspace = true }
hex         = { workspace = true }
# Audit-log HMAC chain step, shared with the node writer so the verifier
# here stays byte-identical. Pulls only hmac+sha2 transitively, keeping
# this crate's "no heavy deps" property.
octravpn-audit-chain = { path = "../octravpn-audit-chain" }
parking_lot = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { version = "1", features = ["full", "test-util"] }
tower       = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
