[package]
name = "octravpn-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "OctraVPN client CLI: pick a route, open session, run tunnel, settle."

[[bin]]
name = "octravpn"
path = "src/main.rs"

[dependencies]
octravpn-core = { path = "../octravpn-core" }

anyhow      = { workspace = true }
async-trait = { workspace = true }
base64      = { workspace = true }
boringtun   = { workspace = true }
bytes       = { workspace = true }
clap        = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
hex         = { workspace = true }
parking_lot = { workspace = true }
rand        = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize     = { workspace = true }

[lints]
workspace = true
