[package]
name = "octravpn-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "OctraVPN client CLI: pick a route, open session, run tunnel, settle."

[[bin]]
name = "octravpn"
path = "src/main.rs"

[dependencies]
octravpn-core = { path = "../octravpn-core" }
octravpn-mesh = { path = "../octravpn-mesh" }
octravpn-tun  = { path = "../octravpn-tun" }

anyhow      = { workspace = true }
async-trait = { workspace = true }
base64      = { workspace = true }
boringtun   = { workspace = true }
bs58        = { workspace = true }
bytes       = { workspace = true }
clap        = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
hex         = { workspace = true }
parking_lot = { workspace = true }
rand        = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
x25519-dalek = { workspace = true }
zeroize     = { workspace = true }

# Bug-report bundle (`octravpn bugreport`).
tar         = "0.4"
flate2      = "1"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
tempfile    = { workspace = true }
flate2      = "1"
tar         = "0.4"
serde_json  = { workspace = true }
toml        = { workspace = true }
# v3 integration test — mock JSON-RPC server.
axum        = { workspace = true }

[lints]
workspace = true
