[package]
name = "octravpn-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "OctraVPN client CLI: pick a route, open session, run tunnel, settle."

[[bin]]
name = "octravpn"
path = "src/main.rs"

[dependencies]
octravpn-core = { path = "../octravpn-core" }
octravpn-mesh = { path = "../octravpn-mesh" }
octravpn-tun  = { path = "../octravpn-tun" }

anyhow      = { workspace = true }
async-trait = { workspace = true }
base64      = { workspace = true }
boringtun   = { workspace = true }
bs58        = { workspace = true }
bytes       = { workspace = true }
clap        = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
hex         = { workspace = true }
parking_lot = { workspace = true }
rand        = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
x25519-dalek = { workspace = true }
zeroize     = { workspace = true }

# Bug-report bundle (`octravpn bugreport`).
tar         = "0.4"
flate2      = "1"

# `oct://` portal: axum local-loopback HTTP, HMAC tokens for the per-circle
# confirm gate. axum is already a workspace dep; hmac added here (sha2 is
# already in the dep tree via octravpn-core).
axum        = { workspace = true }
hmac        = "0.12"
# `octravpn fetch -i` reads sealed-asset passphrases off a controlling
# TTY without echoing. Small, single-purpose crate (~200 LOC of termios
# wrappers); no transitive bloat.
rpassword   = "7"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
tempfile    = { workspace = true }
flate2      = "1"
tar         = "0.4"
serde_json  = { workspace = true }
toml        = { workspace = true }
# v3 integration test + portal route unit tests use ServiceExt::oneshot
# to dispatch synthetic requests without a real TCP listener.
tower       = { version = "0.5", features = ["util"] }
criterion   = { version = "0.5", features = ["html_reports"] }
# Property tests on the MIME sniffer + oct:// URL parser ensure no
# byte sequence panics through the dispatch path.
proptest    = { workspace = true }
# Concurrent-access cache stress uses reqwest from outside the bin's
# loopback. Already in the prod tree; mentioned here for clarity.
reqwest     = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "cold_connect"
harness = false
path = "benches/cold_connect.rs"
