[package]
name = "octravpn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared types, Octra JSON-RPC client, crypto, and receipt formats for OctraVPN."

[dependencies]
octra-core  = { path = "../../../octra-foundry/crates/octra-core" }

anyhow      = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
hex         = { workspace = true }
rand        = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_with  = { workspace = true }
sha2        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
zeroize     = { workspace = true }

# Real crypto for commits, FHE, onion
curve25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf            = { workspace = true }
parking_lot     = { workspace = true }
x25519-dalek    = { workspace = true }
num-bigint-dig  = { workspace = true }
num-integer     = { workspace = true }
num-traits      = { workspace = true }
subtle          = { workspace = true }
bs58            = { workspace = true }
# P1-8/9 receipt journal: atomic file writes (tempfile + persist + fsync)
# so a crash mid-write can't leave us with a partial entry. tempfile is
# already in the dev-deps; promoting to a normal dep for the journal.
tempfile        = { workspace = true }

[lints]
workspace = true

[features]
default = []
# Enabling `kani` switches in stub host calls so harnesses can run without
# network or crypto-backend dependencies.
kani = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "core"
harness = false
path = "benches/core.rs"
