[package]
name = "octravpn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared types, Octra JSON-RPC client, crypto, and receipt formats for OctraVPN."

[dependencies]
octra-core  = { path = "../../../octra-foundry/crates/octra-core" }

anyhow      = { workspace = true }
async-trait = { workspace = true }
# Used by `bearer.rs` so the bearer-auth check has access to
# `HeaderMap`, `StatusCode`, and `IntoResponse`. The module is the
# single canonical source of bearer-gated 401 / 404 / 503 response
# shapes used by every control-plane HTTP route across the workspace
# (octravpn-node `/metrics`, `/events`, `/admin/preauth`; future
# octravpn-analytics consolidations).
axum        = { workspace = true }
base64      = { workspace = true }
ed25519-dalek = { workspace = true }
hex         = { workspace = true }
rand        = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_with  = { workspace = true }
sha2        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
zeroize     = { workspace = true }

# Real crypto for commits, FHE, onion
curve25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
# Perf-5: hardware-accelerated ChaCha20-Poly1305 for the data-plane hot
# path (`aead.rs` shim, wired into `onion.rs` and obfs4 `frame.rs`).
# Already present in `Cargo.lock` transitively via `rcgen` (headscale-api)
# and `tokio-rustls` (octravpn-node's rustls feature) so no new
# transitive deps enter the supply chain. `default-features = false`
# disables the FIPS module (we still get the assembly backend); the
# `aws-lc-sys` feature pulls the C/asm libcrypto build that ships AVX2
# on x86_64 and NEON on aarch64. See `src/aead.rs` for the rationale.
aws-lc-rs       = { version = "1.17", default-features = false, features = ["aws-lc-sys"] }
hkdf            = { workspace = true }
parking_lot     = { workspace = true }
x25519-dalek    = { workspace = true }
num-bigint-dig  = { workspace = true }
num-integer     = { workspace = true }
num-traits      = { workspace = true }
subtle          = { workspace = true }
bs58            = { workspace = true }
# P1-8/9 receipt journal: atomic file writes (tempfile + persist + fsync)
# so a crash mid-write can't leave us with a partial entry. tempfile is
# already in the dev-deps; promoting to a normal dep for the journal.
tempfile        = { workspace = true }
# SPKI fingerprint pinning (audit-1 H-1): the `spki_verifier` module
# implements a `rustls::client::danger::ServerCertVerifier` that
# extracts the leaf cert's SubjectPublicKeyInfo, sha256s it, and
# compares to a pin set parsed out of an `oct://...?spki=base64...`
# URL parameter. The verifier is plumbed into reqwest via
# `Client::builder().use_preconfigured_tls(rustls::ClientConfig)`;
# octravpn-client wires it under the existing `pinned_root_paths`
# config path. Both crates pull `rustls` 0.23 from the workspace
# `reqwest` `rustls-tls` feature so versions stay aligned.
rustls          = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1"
# webpki-roots provides Mozilla's CA bundle so the SPKI-pinned RPC
# path can still chain-validate against the standard public CAs that
# back our chain RPC endpoints. Without this the verifier has no
# fallback trust anchor and every connection fails before we even
# reach the SPKI check.
webpki-roots    = "1"

[lints]
workspace = true

[features]
default = []
# Enabling `kani` switches in stub host calls so harnesses can run without
# network or crypto-backend dependencies.
kani = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "core"
harness = false
path = "benches/core.rs"
