[package]
name = "octravpn-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Decentralized-tailscale mesh primitives: STUN, peer registry, connection FSM, magic DNS."

[features]
# Exposes `PeerRegistry::publish_unverified` to downstream crates so
# their tests don't need to thread a keypair through every fixture.
test-helpers = []

[dependencies]
octravpn-core = { path = "../octravpn-core" }
# Tailscale wire-protocol layer lives in headscale-rs (our Rust port
# of headscale-go). octravpn-mesh implements the wire layer's
# `PreauthRedeemer` + `IpAllocator` traits over OctraVPN's
# PreauthMinter + TailnetIpAllocator (see `headscale_bridge.rs`) and
# re-exports the wire module through `lib.rs` so existing callers
# keep working. `full` keeps the public control-router WireState shape
# aligned with the embedded headscale CLI build; Octra leaves native DERP
# unset unless a future host config explicitly owns it.
headscale-api = { path = "../../../headscale-rs/headscale-api", default-features = false, features = ["admin", "full"] }
# Canonical ACL evaluator — shared with headscale-api as of
# 2026-05-20. Lives in the headscale-rs workspace alongside
# headscale-api so neither side has a dep cycle. The OctraVPN-only
# extension (`SignedAclDoc`, ed25519 owner-signed wrapper) lives in
# our `acl.rs` and consumes the canonical `AclDoc` from here.
headscale-api-acl = { path = "../../../headscale-rs/headscale-api-acl" }

anyhow      = { workspace = true }
async-trait = { workspace = true }
axum        = { workspace = true }
base64      = { workspace = true }
bytes       = { workspace = true }
hmac        = "0.12"
ipnet       = "2"
parking_lot = { workspace = true }
rand        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_with  = { workspace = true }
sha2        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
hex         = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["test-util"] }
tower    = { version = "0.5", features = ["util"] }

[lints]
workspace = true

# Bench gating: `publish_unverified` lives behind `test-helpers`. The
# bench enables it via `required-features` so a casual
# `cargo bench --workspace` doesn't try to compile it without the flag.
[[bench]]
name = "peer_publish"
harness = false
path = "benches/peer_publish.rs"
required-features = ["test-helpers"]

[[test]]
name = "integration_e2e"
path = "tests/integration_e2e.rs"
required-features = ["test-helpers"]
